--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,17 @@
 name = "okx-rs"
 version = "0.1.0"
 edition = "2021"
-description = "Rust Library for the OKX V5 API"
+description = "Unofficial Rust Library for the OKX V5 API"
+repository = "https://github.com/roytang121/okx-rs/"
 license = "MIT OR Apache-2.0"
+keywords = ["okx", "crypto", "exchange", "trading"]
+authors = ["Roy Tang <me@roytang.me>"]
+readme = "./README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11.13", features = ["json"] }
+reqwest = { version = "0.11.22", features = ["json"] }
 base64 = "0.13.0"
 ring = "0.16.20"
 thiserror = "1"
@@ -16,9 +20,11 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0", features = ["arbitrary_precision"]}
 serde_qs = "0.10.1"
-rust_decimal = "1.27.0"
-anyhow = { version = "1.0.68", features = ["backtrace"] }
-log = "0.4.17"
+rust_decimal = "1.32.0"
+anyhow = { version = "1.0.75", features = ["backtrace"] }
+log = "0.4.20"
+tungstenite = { version = "0.20.1", features = ["native-tls"] }
+url = "2.4.1"
 
 [dev-dependencies]
 tokio = { version = "1.18.2", features = ["full", "time", "sync", "tracing"] }
