--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,16 +34,18 @@ async-trait = "0.1.73"
 futures-util = "0.3.28"
 
 # FIXME: should be feature-gated
-log = "0.4.20"
-simd-json = { version = "0.13.4", features = ["runtime-detection", "known-key"] }
-tungstenite = { version = "0.20.1", features = ["native-tls"] }
+log = { version = "0.4.20", optional = true }
+simd-json = { version = "0.13.4", features = ["runtime-detection", "known-key"], optional = true }
+tungstenite = { version = "0.20.1", features = ["native-tls"], optional = true }
 reqwest = { version = "0.11.22", features = ["json"] }
 
 # FIXME: [dev-dependencies]
-dotenv = "0.15.0"
-env_logger = { version = "0.10.0", features = [] }
+dotenv = { version = "0.15.0", optional = true }
+env_logger = { version = "0.10.0", features = [], optional = true }
 
 [features]
-default = []
+default = ["dep:log"]
 vip = []
-simd = []
+simd = ["dep:simd-json"]
+websocket = ["dep:tungstenite"]
+example = ["dep:dotenv", "dep:env_logger"]
