--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,25 +24,26 @@ digest = { version = "0.10", features = ["dev"] }
 hmac = { version = "0.12.1", features = [] }
 const_format = "0.2"
 
+# optional
+tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
+simd-json = { version = "0.13.4", features = ["runtime-detection", "known-key"], optional = true }
+tungstenite = { version = "0.20.1", features = ["native-tls"], optional = true }
+log = { version = "0.4.20", optional = true }
+dotenv = { version = "0.15.0", optional = true }
+env_logger = { version = "0.10.0", features = [], optional = true }
+rust_decimal = { version = "1" , optional = true }
+
 # FIXME: to be removed
-tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
 chrono = { version = "0.4", features = ["serde"] }
-rust_decimal = "1.32.0"
 futures-util = "0.3.28"
 
 # FIXME: should be feature-gated
-log = { version = "0.4.20", optional = true }
-simd-json = { version = "0.13.4", features = ["runtime-detection", "known-key"], optional = true }
-tungstenite = { version = "0.20.1", features = ["native-tls"], optional = true }
 reqwest = { version = "0.11.22", features = ["json"] }
-
-# FIXME: [dev-dependencies]
-dotenv = { version = "0.15.0", optional = true }
-env_logger = { version = "0.10.0", features = [], optional = true }
 
 [features]
 default = ["dep:log"]
 vip = []
 simd = ["dep:simd-json"]
 websocket = ["dep:tungstenite"]
-example = ["dep:dotenv", "dep:env_logger"]
+example = ["dep:dotenv", "dep:env_logger", "dep:tokio", "websocket"]
+orderbook = ["dep:rust_decimal"]
