--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ base64 = "0.13"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["arbitrary_precision"] }
 serde_qs = "0.10.1"
+serde_with = "3.7.0"
 url = "2"
 sha2 = { version = "0.10", default-features = false }
 digest = { version = "0.10", features = ["dev"] }
